@@ -1,3 +1,5 @@
+- Add WXRUBY_VERBOSE build environment variable (Kevin Smith)
+- Rename DEBUG build environment variable to WXRUBY_DEBUG (Kevin Smith)
 - Added task descriptions to rakefiles, so rake --tasks works (Alex Fenton)
 - Clean up rakefile SWIG detection to give clearer error messages (Kevin Smith)
 - Fix name of Image#find_handler_mime (Roy Sutton)
